# APSM-MTP

./: .gitignore  README.md  download_and_extract.py  fix_typing.py  mypy.ini  phase2_explanation.md  pyproject.toml  task.md  thesis_analysis_report.md  unzip.py
data/networks/porto_10n_3k/0/: adj_list.txt  towers.csv
data/networks/porto_10n_3k/1/: adj_list.txt  towers.csv
data/networks/porto_10n_3k/2/: adj_list.txt  towers.csv
data/networks/porto_10n_3k/3/: adj_list.txt  towers.csv
data/networks/porto_10n_3k/4/: adj_list.txt  towers.csv
data/networks/porto_10n_3k/5/: adj_list.txt  towers.csv
fl-baseline/: .gitignore  README.md  pyproject.toml  run_analysis.py  run_simulation.py  run_simulations.sh
fl-baseline/fl_baseline/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
results/Phase2_Full/: kaggle logs save and commit.txt  phase2._log.txt  phase2_comparison_full.csv  summary.json
results/phase 1/: config.json  history.json  logs.txt
results/phase 1/models/: 0.h5  1.h5  2.h5  3.h5  4.h5  5.h5  6.h5  7.h5  8.h5  9.h5
results/phase2/: phase2_comparison.csv
src/: 0_cell_data_preparation.ipynb  1_network_generation.ipynb  2_dataset_generation.ipynb  2_dataset_generation.py  3_simulation.ipynb  4_single_node_training.ipynb  5_centralized_training.ipynb  6_evaluation.ipynb  7_exchanged_data.ipynb  analysis.py  config.json  evaluation.py  failures_analysis.ipynb  failures_simulation.ipynb  failures_simulation_config.json  history.json  history_test.ipynb  hyperparameter_tuning.ipynb  plots.ipynb  porto_taxi_dataset.ipynb  requirements-data-analysis.txt  run_all_comparisons.py  scalability_simulation.py  scalability_simulation_config.json  simulation.py  threshold_sweep.py  train_centralized.py  train_single.py
src/gossiplearning/: aggregators.py  config.py  event.py  history.py  log.py  models.py  node.py  simulator.py  utils.py  weights_marshaling.py
src/utils/: centralized_training.py  data.py  evaluation.py  gossip_training.py  metrics.py  model_creators.py  multiprocessing.py  single_node_training.py
(+32 files in other folders)
